# repo-doc

./: .env.example  .gitignore  AGENTS.md  README.md  action.yml  pyproject.toml  repo-doc.example.toml
.agents/skills/: SKILL.md
.github/workflows/: ci.yml  reusable-agent-ci.yml
docs/: architecture.md  ci.md  configuration.md  evaluation.md  security.md
evals/: promptfooconfig.yaml  provider.py
examples/: api-change.diff  injection.diff  no-doc-change.diff
src/repo_doc_agent/: __init__.py  cli.py  config.py  contract.py  documentation.py  graph.py  model.py  prompts.py  schemas.py  security.py
tests/: test_cli.py  test_graph.py  test_promptfoo_provider.py  test_security.py
